# 202020Reminder

./: .gitignore  202020Reminder.spec  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
docs/images/screenshots/: README.txt
scripts/: run_202020reminder.py
src/twenty_twenty_twenty_reminder/: __init__.py  app.py  config.py  constants.py  timer_state.py  windows.py
tests/: test_config.py
